Updates Huggingface docs and code

--- a/src/data/huggingface/upload.ipynb
+++ b/src/data/huggingface/upload.ipynb
@@ -2,85 +2,106 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-27T03:38:23.643064Z",
-     "start_time": "2024-06-27T03:38:23.633471Z"
+     "end_time": "2024-07-02T21:45:05.490313Z",
+     "start_time": "2024-07-02T21:45:01.915627Z"
     }
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import datasets\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "from huggingface_hub import HfApi\n",
+    "import pandas as pd\n",
+    "\n",
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "env_path = find_dotenv(\".env\")\n",
+    "load_dotenv(env_path);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/cameron/PycharmProjects/breadrx/venv/lib/python3.11/site-packages/numpy/core/fromnumeric.py:59: FutureWarning: 'DataFrame.swapaxes' is deprecated and will be removed in a future version. Please use 'DataFrame.transpose' instead.\n",
-      "  return bound(*args, **kwds)\n"
-     ]
+     "data": {
+      "text/plain": "['.gitattributes', 'README.md']"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "metadata_file = \"./metadata.csv\"\n",
+    "token = os.environ.get(\"HUGGING_FACE_TOKEN\")\n",
+    "hf_api = HfApi(token=token)\n",
     "\n",
-    "df = pd.read_csv(metadata_file)\n",
-    "train, validate, test = np.split(\n",
-    "    df.sample(frac=1, random_state=42),\n",
-    "    [\n",
-    "        int(0.80 * len(df)),\n",
-    "        int(0.90 * len(df))\n",
-    "    ]\n",
-    ")"
+    "repo_id = \"camfruss/bread_proofing\"\n",
+    "hf_api.list_repo_files(repo_id, repo_type=\"dataset\")\n",
+    "\n",
+    "# hf_api.delete_folder(path_in_repo=\"data/\", repo_id=repo_id, repo_type=\"dataset\")\n",
+    "# hf_api.delete_file(path_in_repo=\"dataset_script.py\", repo_id=repo_id, repo_type=\"dataset\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-26T22:10:21.153942Z",
-     "start_time": "2024-06-26T22:10:21.120650Z"
+     "end_time": "2024-07-02T21:45:07.035553Z",
+     "start_time": "2024-07-02T21:45:06.788113Z"
     }
    },
-   "id": "b14ff44f257b177f"
+   "id": "2773229c703e5071"
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "df_train = df[df[\"file_name\"].str.startswith(\"train\")].to_dict(\"records\")\n",
-    "df_test = df[df[\"file_name\"].str.startswith(\"test\")].to_dict(\"records\")\n",
-    "df_validate = df[df[\"file_name\"].str.startswith(\"validate\")].to_dict(\"records\")"
+    "df = pd.read_csv(\"./metadata.csv\")\n",
+    "df = df.rename(columns={\"file_name\": \"image\"})"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-27T02:03:32.519214Z",
-     "start_time": "2024-06-27T02:03:32.490271Z"
+     "end_time": "2024-07-02T21:45:09.694738Z",
+     "start_time": "2024-07-02T21:45:09.666738Z"
+    }
+   },
+   "id": "dd8827bfa6d7c110"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "df_train = df[df[\"image\"].str.startswith(\"train\")].to_dict(\"records\")\n",
+    "df_validate = df[df[\"image\"].str.startswith(\"validate\")].to_dict(\"records\")\n",
+    "df_test = df[df[\"image\"].str.startswith(\"test\")].to_dict(\"records\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-02T21:45:12.544544Z",
+     "start_time": "2024-07-02T21:45:12.526174Z"
     }
    },
    "id": "5a3d7a58e88e7fb5"
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "features = datasets.Features(\n",
     "    {\n",
     "        \"image\": datasets.Image(),\n",
     "        \"upvotes\": datasets.Value(\"int32\"),\n",
-    "        \"over_proof\": datasets.Value(\"float16\"),\n",
     "        \"under_proof\": datasets.Value(\"float16\"),\n",
+    "        \"over_proof\": datasets.Value(\"float16\"),\n",
     "        \"perfect_proof\": datasets.Value(\"float16\"),\n",
     "        \"unsure_proof\": datasets.Value(\"float16\")\n",
     "    }\n",
@@ -89,15 +110,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-27T02:04:28.550590Z",
-     "start_time": "2024-06-27T02:04:28.547428Z"
+     "end_time": "2024-07-02T21:45:13.647170Z",
+     "start_time": "2024-07-02T21:45:13.643300Z"
     }
    },
    "id": "7b15446f1133cdfd"
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -105,19 +126,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0a02508d9e66411a93c3a49bcf00b802"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Casting the dataset:   0%|          | 0/381 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d0008cea3f244a34954680df7ce898ed"
+       "model_id": "9eed14f1beb54f40a5be4f080d59b9f8"
       }
      },
      "metadata": {},
@@ -129,7 +138,19 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "46501a9751584f309b05c96cb62853cc"
+       "model_id": "e46642b010ba4ca29bbb97f315f2f0c9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Casting the dataset:   0%|          | 0/381 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b05b348c55d4425f9e89287142d87fda"
       }
      },
      "metadata": {},
@@ -138,27 +159,27 @@
    ],
    "source": [
     "train_dataset = datasets.Dataset.from_list(df_train).cast(features)\n",
-    "test_dataset = datasets.Dataset.from_list(df_test).cast(features)\n",
     "validate_dataset = datasets.Dataset.from_list(df_validate).cast(features)\n",
+    "test_dataset = datasets.Dataset.from_list(df_test).cast(features)\n",
     "\n",
     "dataset = datasets.DatasetDict({\n",
     "    \"train\": train_dataset,\n",
-    "    \"test\": test_dataset,\n",
-    "    \"valid\": validate_dataset\n",
+    "    \"valid\": validate_dataset,\n",
+    "    \"test\": test_dataset\n",
     "})"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-27T02:04:56.045089Z",
-     "start_time": "2024-06-27T02:04:55.758490Z"
+     "end_time": "2024-07-02T21:45:17.963448Z",
+     "start_time": "2024-07-02T21:45:17.742311Z"
     }
    },
    "id": "2f9144e95bd0ad72"
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -166,7 +187,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3c713d6298b3407abe2496bae63a656e"
+       "model_id": "86df3c640ca14ddea951b52d11bc8319"
       }
      },
      "metadata": {},
@@ -178,7 +199,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "68d03d9025014db488a070e83f59e75e"
+       "model_id": "3d0945a25f974b36b06bfd257616a52b"
       }
      },
      "metadata": {},
@@ -190,7 +211,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3e352935515d43feb65ab9e3585e09fb"
+       "model_id": "7f889736ef254d2fbaf08d416f2c91a4"
       }
      },
      "metadata": {},
@@ -202,43 +223,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8f3d5b553a2c498db816d12c912cc1b5"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Map:   0%|          | 0/381 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a278d689d8cb43cb801b0ac5c1058c18"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "11f360beafc24936a11a950e38339945"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "9f3165ede20649eab5bf5a6bc9502853"
+       "model_id": "377eff5b89fe4b81ae1803e10b7c53c3"
       }
      },
      "metadata": {},
@@ -250,7 +235,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "45a352ecd4db42fe833b6acc6e49f8b7"
+       "model_id": "aa7bf8f76fa148bba80db8a1b1697f37"
       }
      },
      "metadata": {},
@@ -262,7 +247,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0fd9649a48644cddb8c6119165e7a5d4"
+       "model_id": "16af5b8ea75741f9a92572d157b4a191"
       }
      },
      "metadata": {},
@@ -270,11 +255,11 @@
     },
     {
      "data": {
-      "text/plain": "README.md:   0%|          | 0.00/30.0 [00:00<?, ?B/s]",
+      "text/plain": "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b1b86c9f787846fcb06bb6d43720f078"
+       "model_id": "b9f62834c70146d39002de3e13e4aafb"
       }
      },
      "metadata": {},
@@ -282,9 +267,45 @@
     },
     {
      "data": {
-      "text/plain": "CommitInfo(commit_url='https://huggingface.co/datasets/camfruss/bread_proofing/commit/3abe812f345e7cb548d2f8fd11e6b087616f3063', commit_message='Upload dataset', commit_description='', oid='3abe812f345e7cb548d2f8fd11e6b087616f3063', pr_url=None, pr_revision=None, pr_num=None)"
+      "text/plain": "Map:   0%|          | 0/381 [00:00<?, ? examples/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2ce0c968584c4eeab640eadf16852f15"
+      }
      },
-     "execution_count": 39,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1f4bff33294748838f8a90bdcdba57b8"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "README.md:   0%|          | 0.00/907 [00:00<?, ?B/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "d8faf40449ef481f946143ad43ef8d69"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "CommitInfo(commit_url='https://huggingface.co/datasets/camfruss/bread_proofing/commit/ed643ab45f083cc0e3ca92319c84ee6d8d904b82', commit_message='Upload dataset', commit_description='', oid='ed643ab45f083cc0e3ca92319c84ee6d8d904b82', pr_url=None, pr_revision=None, pr_num=None)"
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,144 +316,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-27T02:10:10.123054Z",
-     "start_time": "2024-06-27T02:08:54.331035Z"
+     "end_time": "2024-07-02T21:46:48.432339Z",
+     "start_time": "2024-07-02T21:45:29.283729Z"
     }
    },
    "id": "8c40528b9569f352"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Downloading readme:   0%|          | 0.00/907 [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a0109b2921dd4e3d8fb6594b4e9aaeb0"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading data:   0%|          | 0.00/153M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "4a64b37803624e76a0258e973bf962fc"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading data:   0%|          | 0.00/19.3M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "6b8cf27f2eb649f2a407a9eb07e9d475"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Downloading data:   0%|          | 0.00/19.3M [00:00<?, ?B/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "11eca45d110140be8cfb450cfe3c51d0"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Generating train split:   0%|          | 0/3040 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "5b8766426bf949f29fe07dce013f1b04"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Generating test split:   0%|          | 0/381 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "7aed1e23ae3942fc962addc58c05bb41"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Generating valid split:   0%|          | 0/380 [00:00<?, ? examples/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "2b8890faf8924587b367999d2fdf0f22"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Dataset({\n    features: ['file_name', 'date', 'post_id', 'upvotes', 'post_link', 'image_link', 'over_proof', 'under_proof', 'perfect_proof', 'unsure_proof'],\n    num_rows: 381\n})"
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-27T03:27:39.899324Z",
-     "start_time": "2024-06-27T03:27:13.591921Z"
-    }
-   },
-   "id": "136bd05ce4c79c45"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "{'file_name': <PIL.JpegImagePlugin.JpegImageFile image mode=RGB size=512x512>,\n 'date': '2017-10-08',\n 'post_id': '7524jv',\n 'upvotes': 18,\n 'post_link': 'https://www.reddit.com/r/Sourdough/comments/7524jv/sourdough_5_i_think_im_finally_getting_the_hang/',\n 'image_link': 'https://i.redd.it/7quz7heremqz.jpg',\n 'over_proof': 0.05,\n 'under_proof': 0.05,\n 'perfect_proof': 0.85,\n 'unsure_proof': 0.05}"
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset = datasets.load_dataset(\"camfruss/bread_proofing\", split=\"test\")\n",
-    "dataset"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-27T03:28:09.814104Z",
-     "start_time": "2024-06-27T03:28:09.762669Z"
-    }
-   },
-   "id": "69ab0032e8be66e6"
   },
   {
    "cell_type": "code",
