Updates impl and docs

--- a/src/data/huggingface/upload.ipynb
+++ b/src/data/huggingface/upload.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-02T21:45:05.490313Z",
-     "start_time": "2024-07-02T21:45:01.915627Z"
+     "end_time": "2024-07-28T18:02:00.428183Z",
+     "start_time": "2024-07-28T18:01:58.684628Z"
     }
    },
    "outputs": [],
@@ -30,7 +30,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "['.gitattributes', 'README.md']"
+      "text/plain": "CommitInfo(commit_url='https://huggingface.co/datasets/camfruss/bread_proofing/commit/9420f28a598fcf1af7967c9219d8664a1c8684f0', commit_message='Delete folder data/ with huggingface_hub', commit_description='', oid='9420f28a598fcf1af7967c9219d8664a1c8684f0', pr_url=None, pr_revision=None, pr_num=None)"
      },
      "execution_count": 2,
      "metadata": {},
@@ -50,8 +50,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-02T21:45:07.035553Z",
-     "start_time": "2024-07-02T21:45:06.788113Z"
+     "end_time": "2024-07-28T18:02:02.178665Z",
+     "start_time": "2024-07-28T18:02:01.429954Z"
     }
    },
    "id": "2773229c703e5071"
@@ -67,8 +67,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-02T21:45:09.694738Z",
-     "start_time": "2024-07-02T21:45:09.666738Z"
+     "end_time": "2024-07-28T18:02:11.335247Z",
+     "start_time": "2024-07-28T18:02:11.308788Z"
     }
    },
    "id": "dd8827bfa6d7c110"
@@ -85,8 +85,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-02T21:45:12.544544Z",
-     "start_time": "2024-07-02T21:45:12.526174Z"
+     "end_time": "2024-07-28T18:02:13.207792Z",
+     "start_time": "2024-07-28T18:02:13.194624Z"
     }
    },
    "id": "5a3d7a58e88e7fb5"
@@ -99,19 +99,15 @@
     "features = datasets.Features(\n",
     "    {\n",
     "        \"image\": datasets.Image(),\n",
-    "        \"upvotes\": datasets.Value(\"int32\"),\n",
-    "        \"under_proof\": datasets.Value(\"float16\"),\n",
-    "        \"over_proof\": datasets.Value(\"float16\"),\n",
-    "        \"perfect_proof\": datasets.Value(\"float16\"),\n",
-    "        \"unsure_proof\": datasets.Value(\"float16\")\n",
+    "        \"label\": datasets.Value(\"int32\")\n",
     "    }\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-02T21:45:13.647170Z",
-     "start_time": "2024-07-02T21:45:13.643300Z"
+     "end_time": "2024-07-28T18:02:15.194648Z",
+     "start_time": "2024-07-28T18:02:15.188029Z"
     }
    },
    "id": "7b15446f1133cdfd"
@@ -122,11 +118,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "Casting the dataset:   0%|          | 0/3040 [00:00<?, ? examples/s]",
+      "text/plain": "Casting the dataset:   0%|          | 0/2304 [00:00<?, ? examples/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9eed14f1beb54f40a5be4f080d59b9f8"
+       "model_id": "98b9fa121b0247f392fae79e04c99152"
       }
      },
      "metadata": {},
@@ -134,11 +130,11 @@
     },
     {
      "data": {
-      "text/plain": "Casting the dataset:   0%|          | 0/380 [00:00<?, ? examples/s]",
+      "text/plain": "Casting the dataset:   0%|          | 0/288 [00:00<?, ? examples/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e46642b010ba4ca29bbb97f315f2f0c9"
+       "model_id": "2f410d429337412cbfa0e040b009f411"
       }
      },
      "metadata": {},
@@ -146,11 +142,11 @@
     },
     {
      "data": {
-      "text/plain": "Casting the dataset:   0%|          | 0/381 [00:00<?, ? examples/s]",
+      "text/plain": "Casting the dataset:   0%|          | 0/288 [00:00<?, ? examples/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b05b348c55d4425f9e89287142d87fda"
+       "model_id": "c9f44c5a53324b32a83613ee4c66aa99"
       }
      },
      "metadata": {},
@@ -171,8 +167,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-02T21:45:17.963448Z",
-     "start_time": "2024-07-02T21:45:17.742311Z"
+     "end_time": "2024-07-28T18:02:17.792566Z",
+     "start_time": "2024-07-28T18:02:17.617419Z"
     }
    },
    "id": "2f9144e95bd0ad72"
@@ -187,7 +183,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "86df3c640ca14ddea951b52d11bc8319"
+       "model_id": "667d288d8d994180a5b77ae414e41c77"
       }
      },
      "metadata": {},
@@ -195,11 +191,11 @@
     },
     {
      "data": {
-      "text/plain": "Map:   0%|          | 0/3040 [00:00<?, ? examples/s]",
+      "text/plain": "Map:   0%|          | 0/2304 [00:00<?, ? examples/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "3d0945a25f974b36b06bfd257616a52b"
+       "model_id": "6d5f83d492e04f889fe5d084ed5a2725"
       }
      },
      "metadata": {},
@@ -207,11 +203,11 @@
     },
     {
      "data": {
-      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/31 [00:00<?, ?ba/s]",
+      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/24 [00:00<?, ?ba/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7f889736ef254d2fbaf08d416f2c91a4"
+       "model_id": "7e09aabcf35b4655b01124f46cddf9a2"
       }
      },
      "metadata": {},
@@ -223,7 +219,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "377eff5b89fe4b81ae1803e10b7c53c3"
+       "model_id": "f2a38c3751a34acaaa76408779ebaff9"
       }
      },
      "metadata": {},
@@ -231,11 +227,11 @@
     },
     {
      "data": {
-      "text/plain": "Map:   0%|          | 0/380 [00:00<?, ? examples/s]",
+      "text/plain": "Map:   0%|          | 0/288 [00:00<?, ? examples/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "aa7bf8f76fa148bba80db8a1b1697f37"
+       "model_id": "4ea317e26a27469e9a1df65827fc01ec"
       }
      },
      "metadata": {},
@@ -243,11 +239,11 @@
     },
     {
      "data": {
-      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]",
+      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/3 [00:00<?, ?ba/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "16af5b8ea75741f9a92572d157b4a191"
+       "model_id": "c50584649df74c16a16d07d6ea2f260f"
       }
      },
      "metadata": {},
@@ -259,7 +255,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b9f62834c70146d39002de3e13e4aafb"
+       "model_id": "660a09e1dc5d4cf9884d3b8bb36659a7"
       }
      },
      "metadata": {},
@@ -267,11 +263,11 @@
     },
     {
      "data": {
-      "text/plain": "Map:   0%|          | 0/381 [00:00<?, ? examples/s]",
+      "text/plain": "Map:   0%|          | 0/288 [00:00<?, ? examples/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "2ce0c968584c4eeab640eadf16852f15"
+       "model_id": "4073253b81864dd6919ab9e0bb605e3a"
       }
      },
      "metadata": {},
@@ -279,11 +275,11 @@
     },
     {
      "data": {
-      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]",
+      "text/plain": "Creating parquet from Arrow format:   0%|          | 0/3 [00:00<?, ?ba/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1f4bff33294748838f8a90bdcdba57b8"
+       "model_id": "1a5ea97ee5594f2a92697aa86507bdf6"
       }
      },
      "metadata": {},
@@ -291,11 +287,11 @@
     },
     {
      "data": {
-      "text/plain": "README.md:   0%|          | 0.00/907 [00:00<?, ?B/s]",
+      "text/plain": "README.md:   0%|          | 0.00/3.39k [00:00<?, ?B/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d8faf40449ef481f946143ad43ef8d69"
+       "model_id": "21b9a11015174bf9b58ee443fd57536a"
       }
      },
      "metadata": {},
@@ -303,7 +299,7 @@
     },
     {
      "data": {
-      "text/plain": "CommitInfo(commit_url='https://huggingface.co/datasets/camfruss/bread_proofing/commit/ed643ab45f083cc0e3ca92319c84ee6d8d904b82', commit_message='Upload dataset', commit_description='', oid='ed643ab45f083cc0e3ca92319c84ee6d8d904b82', pr_url=None, pr_revision=None, pr_num=None)"
+      "text/plain": "CommitInfo(commit_url='https://huggingface.co/datasets/camfruss/bread_proofing/commit/c2d11483c56927eef4d1d0d41158b95730d67e9f', commit_message='Upload dataset', commit_description='', oid='c2d11483c56927eef4d1d0d41158b95730d67e9f', pr_url=None, pr_revision=None, pr_num=None)"
      },
      "execution_count": 7,
      "metadata": {},
@@ -316,8 +312,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-02T21:46:48.432339Z",
-     "start_time": "2024-07-02T21:45:29.283729Z"
+     "end_time": "2024-07-28T18:03:31.236866Z",
+     "start_time": "2024-07-28T18:02:30.122301Z"
     }
    },
    "id": "8c40528b9569f352"
